dynamically_typed_tests/invalid/expression/exprTypeErr.wacc
# expresission type mismatch bool->int

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  b = 15 + 6 || 19
end
